--- a/babskeny/src/index.css
+++ b/babskeny/src/index.css
@@ -5,6 +5,12 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  overflow-x:hidden;
+  width:100%;
+}
+html{
+  overflow-x:hidden;
+  width:100%;
 }
 h1,h2,a.nav-link,h6{
 line-height: 1.2;
