--- a/babskeny/src/routes/about/about.css
+++ b/babskeny/src/routes/about/about.css
@@ -12,6 +12,9 @@ body {
     font-weight: 300;
     font-family: 'Raleway', sans-serif;
 }
+span{
+    font-family: 'Arapey', serif !important;
+}
 /*==========================================
 PRE LOADER
 ==========================================*/
@@ -258,6 +261,14 @@ Separator
     background: rgb(209, 172, 102);
     margin-bottom:50px;
 }
+.separator2 {
+    height: 5px;
+    width: 85px;
+    margin: 30px 10vw;
+    background: rgb(209, 172, 102);
+    margin-bottom:50px;
+}
+
 
 /*
 Button
@@ -396,7 +407,7 @@ input:-ms-input-placeholder {
     text-transform:uppercase;
     color:#7b6c63;
     font-weight: 500;
-    margin-bottom:50px;
+    margin-bottom:20px;
     font-size: 40px;
 }
 .ab-heading-content  p{
@@ -478,7 +489,8 @@ input:-ms-input-placeholder {
 }
 
 .ab-home-content h1{
-    font-size:65px;
+    font-size: 3rem;
+    line-height: 1.5;
     font-weight:400;
 }
 .ab-home-content h1 span{
@@ -511,6 +523,7 @@ input:-ms-input-placeholder {
 
 .about-content{
     padding:80px 0;
+    background: rgba(30, 30, 48, 0.84)
 }
 .about-content h3{
     font-size:40px;
@@ -1304,4 +1317,34 @@ input:-ms-input-placeholder {
 .scrollup:hover{
     color:#333;
     transform:scale(1.1);
+}
+.ab-design{
+    background:#d0ab66;
+    height: 500px;
+}
+.ab-design::after{
+    content:'';
+    background:url( "/img/40922787524_0eb78e5bf6_k.jpg");
+    display: flex;
+    flex: 0 0 66.666667%;
+    max-width: 66.666667%;
+    height: 66.666667%;
+    position: absolute;
+   float: right;
+    top: 15vw;
+
+}
+.register-button{
+    background: #9e7d38;
+    padding: 10px 0px;
+    width: 60%;
+    margin: auto;
+
+}
+.register-button:hover{
+    border:1px solid #9e7d38;
+    background:none;
+}
+.register-button a{
+    color: white !important;
 }
